<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Blue Pencil</string>
    <string name="camera_button">Take a picture</string>
    <string name="library_button">Open Library</string>
    <string name="hello_world">Hello world!</string>
    <string name="image_cd_camera">This is a generic content description</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_editorpage">editorpage</string>
    <string name="Filters">Chose a Filter</string>
    <string name="grey">Grayscale</string>
    <string name="invert">Invert</string>
    <string name="green_filter">Greenify</string>
    <string name="blue_filter">Bluetrace</string>
    <string name="sepia_filter">Sepia</string>
    <string name="picture_button">Take Photo</string>
    <string name="gallery_button">Open Gallery</string>
    <string name="red">Redden</string>
    <string name="sharebutton">Share</string>
    <string name="back_button">Back</string>
    <!--<string-array name="filters">-->
        <!--<item>Black and White</item>-->
        <!--<item>Invert Color</item>-->
        <!--<item>Green Hue</item>-->
    <!--</string-array>-->
</resources>
